codepkg/objects/Inquiry__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <formula>Contact__r.MailingStreet &amp; &quot; &quot; &amp; (Contact__r.MailingCity)  &amp;  &quot; &quot; &amp; (Contact__r.MailingState)  &amp;  &quot; &quot; &amp; (Contact__r.MailingPostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Inquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimate_Amount__c</fullName>
        <label>Estimate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Actions__c</fullName>
        <label>Follow-Up Actions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Requires_SV_Follow_Up__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Send Contractors</fullName>
                </value>
                <value>
                    <fullName>Send Loan information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Packet_Sent__c</fullName>
        <label>Packet Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Property_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Contacts</relationshipLabel>
        <relationshipName>Client_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Census__c</fullName>
        <formula>Property__r.census_tract_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property - Census</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <formula>Property__r.City__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Ethnicity__c</fullName>
        <formula>if(ISPICKVAL( Property__r.Ethnicity__c , &quot;Asian&quot;) , &quot;Asian&quot;,
if(ISPICKVAL( Property__r.Ethnicity__c , &quot;African-American&quot;) , &quot;African-American&quot;,
if(ISPICKVAL( Property__r.Ethnicity__c , &quot;Caucasian&quot;) , &quot;Caucasian&quot;,
if(ISPICKVAL( Property__r.Ethnicity__c , &quot;Latino&quot;) , &quot;Latino&quot;,
Null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property - Ethnicity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Female_Headed__c</fullName>
        <formula>Property__r.Female_Headed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property - Female Headed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Income__c</fullName>
        <formula>if(ISPICKVAL( Property__r.Income_Level__c , &quot;very low&quot;) , &quot;very low&quot;,
if(ISPICKVAL( Property__r.Income_Level__c , &quot;low&quot;) , &quot;low&quot;,
if(ISPICKVAL( Property__r.Income_Level__c , &quot;moderate&quot;) , &quot;moderate&quot;,
if(ISPICKVAL( Property__r.Income_Level__c , &quot;high&quot;) , &quot;high&quot;,
Null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property - Income</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Location__c</fullName>
        <formula>Property__r.Street__c &amp; &apos; &apos; &amp; Property__r.City__r.Name &amp; &apos; &apos; &amp; TEXT(Property__r.State__c)  &amp; &apos; &apos; &amp; Property__r.Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Occupants__c</fullName>
        <formula>Property__r.Number_of_occupants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property - Occupants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Owner__c</fullName>
        <formula>Property__r.Owner__r.FirstName &amp; &quot; &quot; &amp; Property__r.Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Units__c</fullName>
        <formula>Property__r.Number_of_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property - Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Ward_del__c</fullName>
        <formula>Property__r.Ward__r.Ward_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Ward</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Inquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Post Card</fullName>
                </value>
                <value>
                    <fullName>Brochure Pick Up</fullName>
                </value>
                <value>
                    <fullName>Flyer</fullName>
                </value>
                <value>
                    <fullName>Direct Mailing</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Ward News Letter</fullName>
                </value>
                <value>
                    <fullName>News Paper</fullName>
                </value>
                <value>
                    <fullName>CRS Website</fullName>
                </value>
                <value>
                    <fullName>Misc.</fullName>
                </value>
                <value>
                    <fullName>Yard Sign</fullName>
                </value>
                <value>
                    <fullName>Councilman</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Eco-Link Mailing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requires_Call_Back__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Uncheck if called</inlineHelpText>
        <label>Requires Call Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_SV_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if additional action needs to be taken after the site visit</inlineHelpText>
        <label>Requires SV Follow-Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Returned_Call_Left_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Returned Call &amp; Left Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Assistance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Assistance</label>
        <type>Checkbox</type>
    </fields>
    <label>Client Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Property_Owner__c</columns>
        <columns>Property_Location__c</columns>
        <columns>Technical_Assistance__c</columns>
        <columns>Site_Visit__c</columns>
        <columns>Note__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INQ-{000000}</displayFormat>
        <label>Client Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>